# beautiFULLshot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  repomix-output.xml  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  retag.yml
check/: request.md
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
docs/journals/: 251229-codebase-improvements.md
plans/251226-1356-tauri-screenshot-app/: phase-01-project-setup.md  phase-02-screenshot-capture.md  phase-03-canvas-editor.md  phase-04-annotation-tools.md  phase-05-beautification.md  phase-06-export-system.md  phase-07-native-integration.md  phase-08-polish-distribution.md  plan.md
plans/251231-0143-region-capture-overlay/: plan.md
plans/reports/: brainstorm-251226-1324-cross-platform-screenshot-beautifier.md  code-reviewer-251227-0323-phase01-setup.md  code-reviewer-251229-1140-phase05-beautification.md  code-reviewer-251229-1435-phase08-polish-distribution.md  debugger-251230-2335-window-capture-dropdown.md  debugger-251231-0138-region-capture-not-working.md  debugger-260114-0140-minimize-white-screen.md  debugger-260114-0750-crop-aspect-ratio-bug.md  docs-manager-251229-1158-phase05-beautification.md  docs-manager-251229-1447-phase08-release.md  docs-manager-260113-0920-documentation-update.md  project-manager-251229-1158-phase05-completion.md  scout-260113-0918-frontend-analysis.md  scout-260113-0918-tauri-backend-analysis.md  scout-260114-0643-annotation-system.md  scout-260114-0743-toolbar-structure.md  tester-251229-1139-phase05-beautification.md  tester-251229-1434-phase08-test-validation.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  beautyfullshot.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  main.rs  overlay.rs  permissions.rs  screenshot.rs  shortcuts.rs  tray.rs
src/components/: about-modal.tsx  permission-required.tsx  region-overlay.tsx  update-modal.tsx
src/data/: aspect-ratios.ts  gradients.ts  wallpapers.ts
src/hooks/: use-auto-update.ts  use-drawing.ts  use-export.ts  use-hotkeys.ts  use-keyboard-shortcuts.ts  use-screenshot.ts  use-sync-shortcuts.ts
(+65 files in other folders)
