[package]
name = "beautyfullshot"
version = "0.1.0"
description = "Cross-platform screenshot beautification app"
authors = ["dcppsw"]
edition = "2021"

[lib]
name = "beautyfullshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
xcap = "0.8"
image = "0.25"
dirs = "5.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
arboard = "3.4"

