[package]
name = "beautyfullshot"
version = "1.0.2"
description = "Cross-platform screenshot beautification app"
authors = ["dcppsw"]
edition = "2021"

[lib]
name = "beautyfullshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
xcap = "0.8.1"
image = "0.25"
dirs = "5.0"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
arboard = "3.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
core-graphics = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm"] }

